<resources>
    <string name="app_name">Pets</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="navigation_text_adoptions">Adoption</string>
    <string name="navigation_text_lost_pets">Lost Pets</string>
    <string name="navigation_text_another_options">Options</string>
    <string name="navigation_text_logout">Logout</string>
    <string name="navigation_text_revoke">Revoke Account</string>
    <string name="navigation_text_exit">Exit</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="navigation_first_name">First Name</string>
    <string name="not_log_in">Unable to login</string>
    <string name="not_close_session">Unable to log out</string>
    <string name="not_revoke">The account has not been revoked</string>
    <string name="not_firebase_auth">No se pudo autenticar con firebase</string>

</resources>
